@@ -1,5 +1,6 @@
     ADDED: option: Panel > View > Locale aware sorting
 
+    FIXED: [ 2154760 ] Krusader erases files when opening for editing
     FIXED: changing sort direction is slow
     FIXED: [ 3015094 ] krusader doesn't exit at closing the application
     FIXED: right clicking on media button doesn't work
